
please update the categories "new features" and "bugfixes" before a pull request merge!

version 2.3.0-dev
new features:
- Added new detector class for RNO-G (+db interface) which uses a mongo-db as source.
The new class allows import/export via compressed json files and has a buffer machinary.
It comes with a class to handle responses of the different signal chain components easily.

bugfixes:

version 2.2.1
bugfixes:
- readRNOGDataMattak: fix bug where .root files would not be found if they are passed as relative paths (instead of absolute paths or folder)

version 2.2.0
new features:
- expand values stored in SimplePhasedTrigger
- added getting to query ARZ charge-excess profiles
- upgrade to proposal v 7.5.0 with new NuRadioProposal interface and improved LPM treatment
- add script to generate / download pre-calculated proposal tables for known detector configurations
- adding default RadioPropa ice model object to medium with the feature to set a personlised object as alternative
- add positions array functionality to simple ice model in average and gradient functions
- analytic ray tracing solutions are now sorted consistently from lowest to highest ray
- added ability to generate high-low-triggered noise on a narrow band but return full-band waveforms
- phased array noise generation utility class: calculate trigger time and cut trace accordingly
- use Philox noise generator in noise adder module (this changes the default random sequence)
- allow raytracing from air to ice and vice versa. Only supported by the Python implementation. (Note that the calculation of the focussing factor was not thoroughly tested.)
- added 'block offset' removal/simulation module for RNO-G
- triggerTimeAdjuster now works more reliably and supports different readout windows per channel.
  The readout time adjustment now is stored in the trigger object and needs to be accounted for in analysis
  by running the triggerTimeAdjuster, analogously to the channelAddCableDelay module.


