@@ -7,6 +7,8 @@ new features:
 - Added new detector class for RNO-G (+db interface) which uses a mongo-db as source.
 The new class allows import/export via compressed json files and has a buffer machinary.
 It comes with a class to handle responses of the different signal chain components easily.
+- Added a class to be able to use Numba to obtain optimised running times for long-running 
+2D ray-tracing operations.
 
 bugfixes:
 
